# i3DSLAM_beta

./: CMakeLists.txt  LICENSE  README.md
app/: app.cpp
g2o/g2o/apps/g2o_viewer/: CMakeCache.txt  Makefile  cmake_install.cmake
g2o/g2o/apps/g2o_viewer/g2o_cli/: Makefile  cmake_install.cmake
g2o/g2o/apps/g2o_viewer/g2o_hierarchical/: Makefile  cmake_install.cmake
include/: P3D.h  computeSE3.h  em.h  features2D.h  functions.h  keypoint.h  localBA.h  map_builder.h  message.h  motion_model.h  node.h  parameters.h  stereo3D.h  stereoP3D.h  utils.h  utils2.h  variable.h
modules/3Dviz_SLAM/: CMakeLists.txt
modules/3Dviz_SLAM/include/: axes.h  camera.h  pose.h  shader.h  shader_m.h  shader_s.h  viz.h  viz_parameters.h
modules/3Dviz_SLAM/include/glad/: glad.h
modules/3Dviz_SLAM/shader/: shader.vs
modules/3Dviz_SLAM/src/: axes.cpp  glad.c  main.cpp  pose.cpp  viz.cpp
modules/data_loader/include/: data_loader.h
modules/data_loader/src/: data_loader.cpp
modules/gui/include/: axis.h  camerapose.h  grid.h  gui.h  guixs.h  i3D_widget.h  logo.h  shader.h  trajectory.h  video_widget.h
modules/gui/shader/: gui.gresource.xml
modules/gui/src/: axis.cpp  camerapose.cpp  grid.cpp  gui.cpp  gui_button_click.cpp  gui_dispatcher.cpp  i3D.cpp  i3D_widget.cpp  logo.cpp  trajectory.cpp  video_widget.cpp
src/: P3D.cpp  computeSE3.cpp  em.cpp  features2D.cpp  functions.cpp  localBA.cpp  map_builder.cpp  message.cpp  motion_model.cpp  node.cpp  parameters.cpp  stereo3D.cpp  stereoP3D.cpp  utils.cpp  utils2.cpp
test/: testgl.cpp  testgl2.cpp
